# v3

firefighting_bringup/: CMakeLists.txt  package.xml
firefighting_bringup/config/: depth_bridge.yaml
firefighting_bringup/config/mavros/: mavros_node.yaml
firefighting_bringup/launch/: integrated.launch.py  iris_depth_runway.launch.py
firefighting_bringup/launch/robots/: iris_depth.launch.py
firefighting_bringup/rviz/: iris.rviz
firefighting_interfaces/: CMakeLists.txt  package.xml
firefighting_interfaces/msg/: FireDetection.msg  MissionState.msg  TargetPosition.msg
firefighting_interfaces/srv/: GoToWaypoint.srv  StartMission.srv
firefighting_iris_description/: CMakeLists.txt  package.xml
firefighting_iris_description/models/iris_depth/: model.config  model.sdf
firefighting_iris_description/models/iris_with_standoffs/: model.config
firefighting_iris_description/worlds/: farm_world.sdf  fire_demo_world.sdf
firefighting_pkg/: package.xml  setup.cfg  setup.py
firefighting_pkg/firefighting_pkg/: fire_vision_node.py  mavlink_works.py  mavros_controller_node.py  mission_manager.py  sim_depth_fire_node.py  sim_yolo_node.py  try_mavros.py  yolo_node.py
